# Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md
.github/workflows/: build.yml
cmake/: warnings.cmake
presenter/: CMakeLists.txt
presenter/src/: assert.hpp  common.hpp  defer.hpp  log.hpp  main.cpp
renderer/: CMakeLists.txt
renderer/include/renderer/: assert.hpp  common.hpp  core.hpp  log.hpp  vulkan_renderer.hpp
renderer/src/: core.cpp  log.cpp  renderer.cpp  vulkan_renderer.cpp
renderer_app/: CMakeLists.txt
src/: base.hpp  log.hpp  main.cpp
